<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectBesarMainYuli</string>
    <string name="judul">Aplikasi Hotel</string>
    <string name="home">Home</string>
    <string name="cari_hotel">Cari Hotel</string>
    <string name="tujuan">Tujuan</string>
    <string name="chek_in">Tgl Chek In</string>
    <string name="lama_inap">Lama Menginap</string>
    <string name="byk_tamu">Total Tamu</string>
    <string name="kamar">Kamar</string>
    <string name="filter">Filter(Bintang, Biasa)</string>
    <string name="pesan">Pesan Hotel</string>

    <string-array name="promo">
        <item>Promo 3 Hari</item>
        <item>Promo 7 Hari</item>
        <item>Promo 10 Harir</item>
        <item>Promo 15 Hari</item>
    </string-array>

    <string name="restaurant">Restaurant</string>
    <string name="makanan">Makanan</string>
    <string name="breakfast">Breakfast</string>
    <string name="dessert">Dessert</string>
    <string name="dinner">Dinner</string>
    <string name="minuman">Minuman</string>
    <string name="juice">Juice</string>
    <string name="coffee">Coffea</string>
    <string name="ice">Ice Tea</string>
    <string name="nomor">No</string>
    <string name="nama">Nama</string>
    <string name="meja">Meja</string>
    <string name="lunch">Lunch</string>
    <string name="tiketbus">Tiket Bus dan Travel</string>
    <string name="darimana">Dari</string>
    <string name="kemana">Ke</string>
    <string name="tgl_prg">Tgl Pergi</string>
    <string name="jmlh_kursi">Jumlah Kursi</string>
    <string name="info">Info Travel</string>
    <string name="profil">Profil</string>
    <string name="saran">Kirim Saran</string>
    <string name="kirimsaran">Pesan</string>
    <string name="pembayaran">Metode Pembayaran</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pesan">PesanActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pembayaran">Pembayaran</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_kirim_pesan">KirimPesan</string>
    <string name="title_activity_promo">Promo</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="title_activity_bus_travel">BusTravel</string>
    <string name="title_activity_detail_pemesanan">DetailPemesanan</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_list_makanan">ListMakanan</string>

</resources>
