<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bmerah"
    tools:context="com.mobile.yulihasni.apphotel.BusTravel">

    <TextView
        android:id="@+id/txtBusTravel"
        android:text="@string/tiketbus"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtDari"
        android:text="@string/darimana"
        android:layout_below="@id/txtBusTravel"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editDari"
        android:layout_below="@+id/txtDari"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtKe"
        android:text="@string/kemana"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@+id/editDari"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editKe"
        android:layout_below="@+id/txtKe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtTglPergi"
        android:text="@string/tgl_prg"
        android:layout_below="@id/editKe"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTglPergi"
        android:layout_below="@id/txtTglPergi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtKursi"
        android:layout_below="@id/editTglPergi"
        android:text="@string/jmlh_kursi"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editKursi"
        android:layout_below="@+id/txtKursi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnProsesTiket"
        android:text="Pesan"
        android:layout_below="@+id/editKursi"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
