<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bmerah" >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bmerah"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
    android:id="@+id/txtJudul"
    android:text="@string/judul"
    android:textSize="30dp"
    android:layout_centerHorizontal="true"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <Button
        android:background="@color/white"
        android:id="@+id/btnPesan"
        android:text="@string/pesan"
        android:layout_below="@id/txtJudul"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnList"
        android:background="@color/white"
        android:text="List Kamar"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@+id/btnPesan"
        android:layout_marginTop="13dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:background="@color/white"
        android:id="@+id/btnPromo"
        android:text="PROMO"
        android:layout_below="@id/btnList"
        android:layout_marginTop="13dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:background="@color/white"
        android:id="@+id/btnRestaurant"
        android:text="@string/restaurant"
        android:layout_below="@+id/btnPromo"
        android:layout_marginTop="13dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:background="@color/white"
        android:id="@+id/btnBus"
        android:text="Tiket Bus dan Travel"
        android:layout_below="@+id/btnRestaurant"
        android:layout_marginTop="13dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:background="@color/white"
        android:id="@+id/btnDetailPemesanan"
        android:text="Konfirmasi Pemesanan"
        android:layout_below="@+id/btnBus"
        android:layout_marginTop="13dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:background="@color/white"
        android:id="@+id/btnProfil"
        android:text="@string/profil"
        android:layout_below="@+id/btnDetailPemesanan"
        android:layout_marginTop="13dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:background="@color/white"
        android:id="@+id/btnSaran"
        android:text="@string/saran"
        android:layout_below="@id/btnProfil"
        android:layout_marginTop="13dp"
        android:textSize="23dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_below="@+id/btnSaran"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="Exit"
        android:elevation="0dp"
        android:layout_height="wrap_content" />



</RelativeLayout>
</ScrollView>